--- a/index.html
+++ b/index.html
@@ -28,25 +28,28 @@
       <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/></svg></div>
       <div class="btn quoteadd-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17h3l2-4V7H5v6h3zm8 0h3l2-4V7h-6v6h3z"/><path d="M0 0h24v24H0z" fill="none"/></svg></div>
       <div class="btn listadd-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg></div>
-      <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"/><path d="M0 0h24v24H0z" fill="none"/></svg></div>
+      <div class="btn numlistadd-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"/><path d="M0 0h24v24H0z" fill="none"/></svg></div>
       <i class="tatesen"></i>
       <div class="btn split-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M15 21h2v-2h-2v2zm4-12h2V7h-2v2zM3 5v14c0 1.1.9 2 2 2h4v-2H5V5h4V3H5c-1.1 0-2 .9-2 2zm16-2v2h2c0-1.1-.9-2-2-2zm-8 20h2V1h-2v22zm8-6h2v-2h-2v2zM15 5h2V3h-2v2zm4 8h2v-2h-2v2zm0 8c1.1 0 2-.9 2-2h-2v2z"/></svg></div>
       <div class="btn full-screen"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"><defs><path id="a" d="M0 0h24v24H0z"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" d="M15 3l2.3 2.3-2.89 2.87 1.42 1.42L18.7 6.7 21 9V3zM3 9l2.3-2.3 2.87 2.89 1.42-1.42L6.7 5.3 9 3H3zm6 12l-2.3-2.3 2.89-2.87-1.42-1.42L5.3 17.3 3 15v6zm12-6l-2.3 2.3-2.87-2.89-1.42 1.42 2.89 2.87L15 21h6z"/><path clip-path="url(#b)" fill="none" d="M0 0h24v24H0z"/></svg></div>
       <div class="btn switch-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M9 7H7v2h2V7zm0 4H7v2h2v-2zm0-8c-1.11 0-2 .9-2 2h2V3zm4 12h-2v2h2v-2zm6-12v2h2c0-1.1-.9-2-2-2zm-6 0h-2v2h2V3zM9 17v-2H7c0 1.1.89 2 2 2zm10-4h2v-2h-2v2zm0-4h2V7h-2v2zm0 8c1.1 0 2-.9 2-2h-2v2zM5 7H3v12c0 1.1.89 2 2 2h12v-2H5V7zm10-2h2V3h-2v2zm0 12h2v-2h-2v2z"/></svg></div>
       <i class="tatesen"></i>
-      <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 7v2.99s-1.99.01-2 0V7h-3s.01-1.99 0-2h3V2h2v3h3v2h-3zm-3 4V8h-3V5H5c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-8h-3zM5 19l3-4 2 3 3-4 4 5H5z"/><path d="M0 0h24v24H0z" fill="none"/></svg></div>
-      <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/></svg></div>
+      <div class="btn imageadd-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 7v2.99s-1.99.01-2 0V7h-3s.01-1.99 0-2h3V2h2v3h3v2h-3zm-3 4V8h-3V5H5c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-8h-3zM5 19l3-4 2 3 3-4 4 5H5z"/><path d="M0 0h24v24H0z" fill="none"/></svg></div>
+      <div class="btn urladd-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/></svg></div>
       <i class="tatesen"></i>
-      <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"/></svg></div>
-      <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16c1.05-3.19 4.05-5.5 7.6-5.5 1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"/></svg></div>
+      <div class="btn spredadd-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M10 10.02h5V21h-5zM17 21h3c1.1 0 2-.9 2-2v-9h-5v11zm3-18H5c-1.1 0-2 .9-2 2v3h19V5c0-1.1-.9-2-2-2zM3 19c0 1.1.9 2 2 2h3V10H3v9z"/></svg></div>
+      <div class="btn coloadd-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path fill-opacity=".36" d="M0 20h24v4H0z"/><path d="M11 3L5.5 17h2.25l1.12-3h6.25l1.12 3h2.25L13 3h-2zm-1.38 9L12 5.67 14.38 12H9.62z"/></svg></div>
+      <!-- <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"/></svg></div>
+      <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16c1.05-3.19 4.05-5.5 7.6-5.5 1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"/></svg></div> -->
+      <div class="btn" style="width:5rem;"><input type="color"></div>
       <i class="tatesen"></i>
       <div class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0z"/><path d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"/></svg></div>
     </div>
   </div>
 
-  <textarea spellcheck="false" class="mook-edi-chi inputmarkbox"></textarea>
-  <textarea spellcheck="false" class="mook-edi-chi outputmarkbox active" readonly></textarea>
-  <div class="mook-edi-chi previewer"></div>
+  <textarea wrap="soft" spellcheck="false" class="mook-edi-chi inputmarkbox"></textarea>
+  <textarea wrap="soft" spellcheck="false" class="mook-edi-chi outputmarkbox" readonly></textarea>
+  <div class="mook-edi-chi previewer active"></div>
 </div>
 
 
@@ -85,6 +88,11 @@ window.addEventListener('load', function() {
   var titleadd_btn  = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .titleadd-btn');
   var quoteadd_btn  = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .quoteadd-btn');
   var listadd_btn  = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .listadd-btn');
+  var numlistadd_btn = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .numlistadd-btn');
+  var imageadd_btn = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .imageadd-btn');
+  var urladd_btn = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .urladd-btn');
+  var spredadd_btn = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .spredadd-btn');
+  var coloadd_btn = document.querySelector(MOOK_MARKDOWN_TAR + ' > div.setting > div.btn-group > .coloadd-btn');
 
   // 挿入系の処理のためカーソル位置を取得する
   document.querySelector(MOOK_MARKDOWN_TAR + '> .inputmarkbox').addEventListener( "blur", function(){
@@ -156,25 +164,91 @@ window.addEventListener('load', function() {
     textareaFocusScroll();
   }, false);
 
+  // table追加ボタン
+  spredadd_btn.addEventListener('click', function(){
+    var val = MOOK_EDITOR_ELEM.value;
+    var preText = val.slice(0, startcursor);
+    // var selctText = val.slice(startcursor, endcursor);
+    var laterText = val.slice(endcursor, val.length);
+    MOOK_EDITOR_ELEM.value = preText + '\n' + '|  |  |\n| ---- | ---- |\n|  |  |\n|  |  |\n' 
+      + laterText;
+    MOOK_EDITOR_ELEM.focus();
+    MOOK_EDITOR_ELEM.setSelectionRange(startcursor + 1, endcursor + 1);
+    mookMarkUpdate();
+    textareaFocusScroll();
+  }, false);
+
+
+ // text-color追加ボタン
+ coloadd_btn.addEventListener('click', function(){
+  var val = MOOK_EDITOR_ELEM.value;
+    if(startcursor == endcursor){
+      // 範囲選択していない場合
+      var preText = val.slice(0, startcursor);
+      var laterText = val.slice(startcursor, val.length); 
+      MOOK_EDITOR_ELEM.value = preText + '<span style="color:"></span>' + laterText;
+      MOOK_EDITOR_ELEM.focus();
+      MOOK_EDITOR_ELEM.setSelectionRange(startcursor + 19, startcursor + 19);
+    } else {
+      var preText = val.slice(0, startcursor);
+      var selctText = val.slice(startcursor, endcursor);
+      var laterText = val.slice(endcursor, val.length);
+      MOOK_EDITOR_ELEM.value = preText + '<span style="color:">' + selctText + '</span>' + laterText;
+      MOOK_EDITOR_ELEM.focus();
+      MOOK_EDITOR_ELEM.setSelectionRange(startcursor + 19, endcursor + 19);
+    }
+    mookMarkUpdate();
+    textareaFocusScroll();
+  }, false);
+
+
   // Titleボタン
   titleadd_btn.addEventListener('click', function(){
-    lineHeadAdding(6, '#')
+    lineHeadAdding(6, '#', '#');
   }, false);
 
   // 引用ボタン
   quoteadd_btn.addEventListener('click', function(){
-    lineHeadAdding(3, '>')
+    lineHeadAdding(3, '>', '>');
   })
 
-  //　段落ボタン
+  //　リストボタン
   listadd_btn.addEventListener('click', function(){
-    lineHeadAdding(1, '*')
+    lineHeadAdding(1, '*', '\*');
   });
 
+  // 数字リストボタン
+  numlistadd_btn.addEventListener('click', function(){
+    lineHeadAdding(2, '1.', '\\d\\. ');
+  })
+
+  // 画像追加ボタン
+  imageadd_btn.addEventListener('click', function(){
+    var val = MOOK_EDITOR_ELEM.value;
+    var preText = val.slice(0, startcursor);
+    var laterText = val.slice(startcursor, val.length); 
+    MOOK_EDITOR_ELEM.value = preText + '[]()' + laterText;
+    MOOK_EDITOR_ELEM.focus();
+    MOOK_EDITOR_ELEM.setSelectionRange(startcursor + 1, startcursor + 1);
+    mookMarkUpdate();
+    textareaFocusScroll();
+  }, false);
 
 
+  // URL追加ボタン
+  urladd_btn.addEventListener('click', function(){
+    var val = MOOK_EDITOR_ELEM.value;
+    var preText = val.slice(0, startcursor);
+    var laterText = val.slice(startcursor, val.length); 
+    MOOK_EDITOR_ELEM.value = preText + '![]( "")' + laterText;
+    MOOK_EDITOR_ELEM.focus();
+    MOOK_EDITOR_ELEM.setSelectionRange(startcursor + 2, startcursor + 2);
+    mookMarkUpdate();
+    textareaFocusScroll();
+  }, false);
 
-  function lineHeadAdding(maxStringNum, tarString) {
+
+  function lineHeadAdding(maxStringNum, tarString, searchString) {
     var val = MOOK_EDITOR_ELEM.value; // もともとのデータ
     var len = val.length;
     var pos = startcursor; // 最後に選択していたカーソル位置
@@ -184,13 +258,13 @@ window.addEventListener('load', function() {
     var lineTexts    = selectText.split(/\r\n|\r|\n/);
     for (i = 0; i < lineTexts.length; i++) {
       var text = lineTexts[i];
-      regexp_1 = new RegExp('[^' + tarString + ']'); // ターゲットゲット文字検索用
-      regexp_2 = new RegExp('[^' + tarString + ' ]'); // 除去時に使用するターゲット文字＋スペースを除去
+      regexp_1 = new RegExp('[^' + searchString + ']'); // ターゲットゲット文字検索用
+      regexp_2 = new RegExp('[^' + searchString + ' ]'); // 除去時に使用するターゲット文字＋スペースを除去
       level = (text + '【END--LINE-MOOK】').search(regexp_1);
       if(level == 0){
         lineTexts[i] =  tarString + ' ' + text;
-      } else if (level == maxStringNum){
-        if((text + '【END--LINE-MOOK】').search(regexp_2) == maxStringNum + 1){
+      } else if (level >= maxStringNum){
+        if((text + '【END--LINE-MOOK】').search(regexp_2) == level + 1){
           lineTexts[i] = text.slice(level + 1, text.length);
         } else {
           lineTexts[i] = text.slice(level, text.length);
@@ -427,13 +501,19 @@ window.addEventListener('load', function() {
 
       spaceNum = (val.slice(line_start, line_end) + '【END--LINE-MOOK】').search(/[^\s]/)
       if(spaceNum === -1){spaceNum = 0}
-      var is_specialString = (val.slice(line_start + spaceNum, line_end) + '【END--LINE-MOOK】').search(/[\*|\+|\-] /)
-      if(is_specialString === -1){is_specialString = 0} else {is_specialString = 1}
+      var is_lisString = (val.slice(line_start + spaceNum, line_end) + '【END--LINE-MOOK】').search(/[\*|\+|\-] /)
+      if(is_lisString === -1){is_lisString = 0} else {is_lisString = 1}
+      var is_numlisString = (val.slice(line_start + spaceNum, line_end) + '【END--LINE-MOOK】').search(/\d+\. /)
+      if(is_numlisString === -1){is_numlisString = 0} else {is_numlisString = 1}
+
+      console.log('1. '.repeat(is_numlisString))
 
       elem.value = preText + '\n' + '\u0020'.repeat(spaceNum) 
-        + val.slice(line_start+spaceNum, line_start+spaceNum+2).repeat(is_specialString) + laterText;
+        + val.slice(line_start+spaceNum, line_start+spaceNum+2).repeat(is_lisString)
+        + '1. '.repeat(is_numlisString)
+        + laterText;
 
-      elem.selectionStart = preText.length + spaceNum + (is_specialString * 2) + 1 // 改行コード分をプラス
+      elem.selectionStart = preText.length + spaceNum + (is_lisString * 2) + (is_numlisString * 3) + 1 // 改行コード分をプラス
       elem.selectionEnd   = elem.selectionStart
       elem.scrollTop = elem.scrollTop + editor_font_size + 10;
 
